# statmech_models

./: README.md  microcanon_distr.py
C_py_arrays/: CMakeLists.txt  main.cpp  py.cpp  test.cpp  test0.cpp
Izing/: CMakeLists.txt  Izing.cpp  Izing.h  Izing_2D.nb  Izing_py.cpp  main.cpp
compilation/: main.c  main2.c
compilation/sqrt/: CMakeLists.txt  Makefile  main.c  sqrt
compilation/sqrt/include/: func.h
compilation/sqrt/lib/: func.c
cython_quad/: CMakeLists.txt  quadpb.cpp  quadratic.cpp  quadratic.hpp  test  test.cpp
gsl_rnd/: main.cpp
harmonic/: CMakeLists.txt  harmonic.cpp  harmonic.h  harmonic_py.cpp  main.cpp
percolation/: CMakeLists.txt  main.cpp  percol  percol.cpp  percol.hpp  percol_v.cpp  percol_v.hpp  prob_pb.cpp
percolation_py/: CMakeLists.txt  C_test.py  percol_pb.cpp  percolation  py_test.py  rebuild_py.sh  test.cpp
polymer/: CMakeLists.txt  main.cpp  polymer.cpp  polymer.h  polymer_py.cpp  Случайное_блуждание.docx
soft_spheres/: CMakeLists.txt  main.cpp  soft_spheres.cpp  soft_spheres.h  soft_spheres_py.cpp
test_limit/: generate.hpp  main.cpp  test_lim.py
